updated new transaction table for transactions for each client using the app